[gd_scene load_steps=3 format=3 uid="uid://bv8lal3w6maj2"]

[ext_resource type="Theme" path="res://resources/themes/default_theme.tres" id="1_theme"]
[ext_resource type="Script" path="res://scripts/ui/facility_assignment_dialog_controller.gd" id="2_script"]

[node name="FacilityAssignmentDialog" type="Window"]
title = "Assign Creature to Facility"
initial_position = 2
size = Vector2i(500, 600)
unresizable = true
popup_window = true
theme = ExtResource("1_theme")
script = ExtResource("2_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FacilityLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Training Facility"
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CreatureSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="CreatureLabel" type="Label" parent="MarginContainer/VBoxContainer/CreatureSection"]
layout_mode = 2
text = "Select Creature:"
theme_override_font_sizes/font_size = 16

[node name="CreatureScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/CreatureSection"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="CreatureList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CreatureSection/CreatureScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="ActivitySection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ActivityLabel" type="Label" parent="MarginContainer/VBoxContainer/ActivitySection"]
layout_mode = 2
text = "Select Activity:"
theme_override_font_sizes/font_size = 16

[node name="ActivityOption" type="OptionButton" parent="MarginContainer/VBoxContainer/ActivitySection"]
layout_mode = 2

[node name="FoodSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="FoodLabel" type="Label" parent="MarginContainer/VBoxContainer/FoodSection"]
layout_mode = 2
text = "Select Food:"
theme_override_font_sizes/font_size = 16

[node name="FoodScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/FoodSection"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="FoodGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/FoodSection/FoodScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 5
columns = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 2

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Cancel"

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Assign"
disabled = true

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/CancelButton" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/ConfirmButton" to="." method="_on_confirm_pressed"]